[NIAD-3132] Updated AllergyIntoleranceMapperTest.java for https://github.com/NHSDigital/nia-patient-switching-standard-adaptor/pull/695#discussion_r1675586914